# official-sources-esp

./: .gitignore  AGENTS.md  NEXT_AGENT_HANDOFF.md  PROJECT_STATE.md  README.md  TASK_QUEUE.md  pyproject.toml
config/: sources.yaml
docs/: ARCHITECTURE.md  AUTONOMOUS_BULLETINS_RESEARCH.md  BACKUP_AND_RESTORE.md  CROSS_PROJECT_INTEGRATION_MAP.md  DATA_MODEL.md  DOWNSTREAM_CONTRACT.md  DOWNSTREAM_IMPORT_CHECKLIST.md  DOWNSTREAM_ONBOARDING.md  MCP_CASE_TAXONOMY.md  MCP_DOWNSTREAM_DEMAND_CONTRACT.md  MCP_DOWNSTREAM_INTEGRATION_CLOSURE.md  MCP_DOWNSTREAM_SOURCE_NEEDS_MATRIX.md  MCP_EDUAYUDAS_EVIDENCE_PACKET_PROFILE.md  MCP_LAAYUDA_SOURCE_RESOLVER_PROFILE.md  MCP_OFFICIAL_COMPLIANCE_GUIDE.md  MCP_READONLY_UPSTREAM_V1_FINAL_CLOSURE.md  MCP_RENTA_FISCAL_REFERENCE_PROFILE.md  MCP_TOOLS.md  OFFICIAL_BULLETIN_REGISTRY.md  OPOSITIONS_ALERT_GRADE_STRATEGY.md  OPOSITIONS_SOURCE_ALERTS_SCHEMA.md  PRE_DEPLOY_VPS_CHECKLIST.md  PRIOR_ART_AND_REFERENCES.md  ROADMAP.md  SECURITY.md  SOURCES_POLICY.md  SOURCE_COVERAGE_RUN_PLAN.md  SOURCE_COVERAGE_USAGE.md  SOURCE_STATUS_CONTRACT.md  VALIDATION.md  VALIDATION_MCP_DOWNSTREAM_INTEGRATION_CLOSURE_2026-05-31.md  VALIDATION_MCP_DOWNSTREAM_SMOKE_CHECKER_2026-05-31.md  VALIDATION_MCP_FISCAL_REFERENCE_2026-05-31.md  VALIDATION_MCP_READONLY_UPSTREAM_V1_FINAL_CLOSURE_2026-05-31.md
scripts/: ingest_boe_summary.py
tests/: conftest.py  test_api_monitor.py  test_bdns_adapter.py  test_boa_adapter.py  test_bocm_adapter.py  test_bocyl_adapter.py  test_boe_adapter.py  test_boe_artifacts.py  test_boe_consolidated.py  test_boe_http_policy.py  test_cli.py  (+45 more)
(+493 files in other folders)
