[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "official-sources"
version = "0.1.0"
description = "Reusable infrastructure for ingesting and tracing official public sources."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
    "pydantic>=2.7",
    "PyYAML>=6.0",
]

[project.scripts]
official-sources = "official_sources.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/official_sources"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
